@@ -13,9 +13,10 @@ void * xrealloc (void *buf, size_t size);
 void xfree (void *buf);
 
 char *strdup (const char *string);
-char *strsep (char **string, const char *delim);
 char *strndup (const char *s, size_t n);
 char *stpcpy (char *dest, const char *src);
+
+char *strsep (char **string, const char *delim);
 
 size_t strnlen (const char *string, size_t maxlen);
 #endif
